# pyrisccore

./: .gitignore  README.rst  conftest.py  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
.github/workflows/: main.yaml  pytest.yaml
pyrisccore/: __init__.py  __main__.py  misc.py
pyrisccore/instructions/: __init__.py
pyrisccore/vm/forms/: field.py  format.py  instruction.py  isa.py  operation.py  pseudoinstruction.py  register.py  slice.py  word.py
pyrisccore/vm/particulars/isa/: __init__.py  rv32i.py
tests/: test_field.py  test_instructions.py  test_main.py  test_misc.py  test_registers.py  test_slice.py
