[metadata]
name = pyrisccore
version = 0.0
url = https://github.com/xSetech/pyrisccore
platforms = unix, linux, osx
author = Seth Junot
author_email = xsetech@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3 :: Only
    Operating System :: MacOS :: MacOS X


[options]
packages =
    pyrisccore
python_requires = >=3.8
